# packages

./: .gitignore  .taplo.toml  Cargo.toml  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: motion.yml
alloc/: Cargo.toml
alloc/src/: lib.rs
crates/argon2/: Cargo.toml  build.rs
crates/argon2/package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
crates/argon2/package/main/: module.json5
crates/argon2/src/: lib.rs
crates/bcrypt/: Cargo.toml  README.md  build.rs
crates/bcrypt/package/: CHANGELOG.md  LICENSE  README.md  index.ets  oh-package.json5
crates/bcrypt/package/main/: module.json5
crates/bcrypt/src/: hash_task.rs  lib.rs  salt_task.rs  verify_task.rs
crates/crc32/: Cargo.toml
crates/crc32/package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
crates/crc32/package/src/main/: module.json5
crates/crc32/src/: lib.rs
crates/image/: Cargo.toml  README.md
crates/image/package/: CHANGELOG.md  LICENSE  README.md  index.ets  oh-package.json5
crates/image/package/src/main/: module.json5
crates/image/src/: avif.rs  fast_resize.rs  jpeg.rs  png.rs  transformer.rs  utils.rs  webp.rs
crates/jieba/: Cargo.toml
crates/jieba/package/: CHANGELOG.md  index.ets  oh-package.json5
crates/jieba/package/main/: module.json5
crates/jieba/src/: lib.rs
crates/jsonwebtoken/: Cargo.toml
crates/jsonwebtoken/package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
crates/jsonwebtoken/package/src/main/: module.json5
crates/jsonwebtoken/src/: algorithm.rs  decode.rs  header.rs  sign.rs  validation.rs  verify.rs
crates/pinyin/: Cargo.toml
crates/pinyin/package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
crates/pinyin/package/src/main/: module.json5
crates/pinyin/src/: lib.rs
crates/snappy/: Cargo.toml  build.rs
crates/snappy/.cargo/: config.toml
crates/snappy/package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
crates/snappy/package/main/: module.json5
crates/snappy/src/: lib.rs
crates/xxhash/: Cargo.toml
crates/xxhash/package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
crates/xxhash/package/main/: module.json5
crates/xxhash/src/: lib.rs
