[package]
name    = "global-alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# For newer version mimalloc will load atomic for arm32. Before support other library, we need use it.
[dependencies]
[target.'cfg(all(not(target_os = "linux"), not(target_family = "wasm")))'.dependencies]
mimalloc = { git = "https://github.com/richerfu/mimalloc_rust.git" }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { git = "https://github.com/richerfu/mimalloc_rust.git", features = ["local_dynamic_tls"] }
