[package]
name = "argon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0.0-beta.2" }
napi-derive-ohos = { version = "1.0.0-beta.2" }
argon2 = { version = "0.5", features = ["rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }
global-alloc = { workspace = true }

[build-dependencies]
napi-build-ohos = { version = "1.0.0-beta.2" }

[profile.release]
lto = true
codegen-units = 1
