[package]
name = "bcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0.0-beta.2" }
napi-derive-ohos = { version = "1.0.0-beta.2" }
base64 = { version = "0.22" }
bcrypt = "0.15"
blowfish = { version = "0.9", features = ["bcrypt"] }
getrandom = "0.2"
global-alloc = { workspace = true }

[build-dependencies]
napi-build-ohos = { version = "1.0.0-beta.2" }

[profile.release]
lto = true
codegen-units = 1
