[package]
name    = "bcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true }
napi-derive-ohos = { workspace = true }
base64           = { version = "0.22" }
bcrypt           = "0.17"
blowfish         = { version = "0.9", features = ["bcrypt"] }
global-alloc     = { workspace = true }
rand             = "0.9"

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto           = true
codegen-units = 1
