[package]
name    = "crc32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true }
napi-derive-ohos = { workspace = true }
crc32c           = { version = "0.6" }
crc32fast        = { version = "1.4", features = ["nightly"] }
global-alloc     = { workspace = true }

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true
