[package]
name    = "image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { workspace = true }
napi-derive-ohos = { workspace = true }
num-complex = "0.4"
num_cpus = "1"
once_cell = "1"
png = "0.17"
rexif = "0.7"
rgb = "0.8"
resvg = "0.40"
svgtypes = "0.14"
fast_image_resize = "3"
imagequant = "4.0.0"
image = { version = "0.24", default-features = false, features = [
  "jpeg",
  "ico",
  "png",
  "pnm",
  "tga",
  "tiff",
  "bmp",
  "webp",
  "hdr",
  "dxt",
  "dds",
  "farbfeld",
  "jpeg_rayon",
  "openexr",
] }
jpeg-decoder = "0.3"
libavif = { version = "0.14.0", default-features = false, features = ["codec-aom"] }
libc = "0.2"
lodepng = "3"

[dependencies.libwebp-sys]
version          = "0.9"
default-features = false
features         = ["std", "parallel", "avx2", "sse41", "neon"]

[target.'cfg(all(target_arch = "arm", target_os = "linux", target_env = "ohos"))'.dependencies]
oxipng      = { features = ["zopfli", "parallel"], default-features = false, version = "9" }
mozjpeg-sys = { default-features = false, version = "2" }

[target.'cfg(not(all(target_arch = "arm", target_os = "linux", target_env = "ohos")))'.dependencies]
oxipng      = { features = ["parallel"], default-features = false, version = "9" }
mozjpeg-sys = { features = ["nasm_simd_parallel_build"], default-features = false, version = "2" }

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true
