[package]
name    = "jieba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { version = "*" }
napi-derive-ohos = { version = "*" }
once_cell    = "1"
jieba-rs     = { version = "0.6", features = ["default-dict", "tfidf", "textrank"] }

[build-dependencies]
napi-build-ohos = { version = "*" }

[profile.release]
lto = true
codegen-units =  1

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1" }

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }
