[package]
name = "jsonwebtoken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "*", default-features = false, features = [
    "ohos",
    "serde-json-ordered",
    "object_indexmap",
] }
napi-derive-ohos = { version = "*" }
rand_core = { version = "0.6", features = ["std"] }
serde = "1.0"
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
jsonwebtoken = { version = "9" }
global-alloc = {workspace = true}

[build-dependencies]
napi-build-ohos = { version = "*" }

[profile.release]
lto = true
codegen-units = 1