[package]
name = "pinyin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0.0-beta.2" }
napi-derive-ohos = { version = "1.0.0-beta.2" }
once_cell = "1"
pinyin = "0.10"
rayon = "1"
jieba-rs = "0.6"
global-alloc = { workspace = true }

[build-dependencies]
napi-build-ohos = { version = "1.0.0-beta.2" }

[profile.release]
lto = true
codegen-units = 1
