[package]
name    = "xxhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true }
napi-derive-ohos = { version = "1.0.0-beta.2" }
xxhash-rust      = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
global-alloc     = { workspace = true }

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto           = true
codegen-units = 1
